--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
     border:1px solid rgba(255,255,255,0.4);
     background:rgba(255,255,255,0.2);
     backdrop-filter: blur(15px);
-    box-shadow:0 25px 45px rgba(0,0,0,0.4);
+    box-shadow:0 25px 45px rgba(92, 88, 88, 0.4);
     text-align:center;
 }
 
